homepage link added
Signed-off-by: DISHEN MAKWANA <dishenmakwana.dm@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "todo-list",
     "version": "0.1.0",
+    "homepage": "https://dishenmakwana.github.io/todolist",
     "private": true,
     "dependencies": {
         "@reduxjs/toolkit": "^1.7.1",
